.deploy/k8s/k8s-manifest.demo.yaml
---
kind: Service
apiVersion: v1
metadata:
    name: infiria-demo-lb
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-name: 'demo.infiria.co'
        service.beta.kubernetes.io/do-loadbalancer-protocol: 'http2'
        service.beta.kubernetes.io/do-loadbalancer-http2-ports: '443'
        # Replace with your Certificate Id. You can get a list of Ids with 'doctl compute certificate list'
        service.beta.kubernetes.io/do-loadbalancer-certificate-id: '4bf6d197-6dbb-4394-815b-a543761d94d2'
        service.beta.kubernetes.io/do-loadbalancer-size-slug: 'lb-small'
        service.beta.kubernetes.io/do-loadbalancer-hostname: 'demo.infiria.co'
spec:
    type: LoadBalancer
    selector:
        app: infiria-demo-webapp
    ports:
        - name: http
          protocol: TCP
          port: 443
          targetPort: 4200
---
kind: Service
apiVersion: v1
metadata:
    name: infiria-demo-api-lb
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-name: 'apidemo.infiria.co'
        service.beta.kubernetes.io/do-loadbalancer-protocol: 'http2'
        service.beta.kubernetes.io/do-loadbalancer-http2-ports: '443'
        # Replace with your Certificate Id. You can get a list of Ids with 'doctl compute certificate list'
        service.beta.kubernetes.io/do-loadbalancer-certificate-id: '4bf6d197-6dbb-4394-815b-a543761d94d2'
        service.beta.kubernetes.io/do-loadbalancer-size-slug: 'lb-small'
        service.beta.kubernetes.io/do-loadbalancer-hostname: 'apidemo.infiria.co'
spec:
    type: LoadBalancer
    selector:
        app: infiria-demo-api
    ports:
        - name: http
          protocol: TCP
          port: 443
          targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infiria-demo-api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: infiria-demo-api
    template:
        metadata:
            labels:
                app: infiria-demo-api
        spec:
            containers:
                - name: infiria-demo-api
                  image: registry.digitalocean.com/ever/infiria-api-demo:latest
                  ports:
                      - containerPort: 3000
                        protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infiria-demo-webapp
spec:
    replicas: 1
    selector:
        matchLabels:
            app: infiria-demo-webapp
    template:
        metadata:
            labels:
                app: infiria-demo-webapp
        spec:
            containers:
                - name: infiria-demo-webapp
                  image: registry.digitalocean.com/ever/infiria-webapp-demo:latest
                  ports:
                      - containerPort: 4200
                        protocol: TCP
