.deploy/k8s/k8s-manifest.prod.yaml
---
kind: Service
apiVersion: v1
metadata:
    name: infiria-prod-web-lb
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-name: 'app.infiria.co'
        service.beta.kubernetes.io/do-loadbalancer-protocol: 'http2'
        service.beta.kubernetes.io/do-loadbalancer-http2-ports: '443'
        # Replace with your Certificate Id. You can get a list of Ids with 'doctl compute certificate list'
        service.beta.kubernetes.io/do-loadbalancer-certificate-id: '4bf6d197-6dbb-4394-815b-a543761d94d2'
        service.beta.kubernetes.io/do-loadbalancer-size-slug: 'lb-small'
        service.beta.kubernetes.io/do-loadbalancer-hostname: 'app.infiria.co'
spec:
    type: LoadBalancer
    selector:
        app: infiria-prod-webapp
    ports:
        - name: http
          protocol: TCP
          port: 443
          targetPort: 4200
---
kind: Service
apiVersion: v1
metadata:
    name: infiria-prod-api-lb
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-name: 'api.infiria.co'
        service.beta.kubernetes.io/do-loadbalancer-protocol: 'http2'
        service.beta.kubernetes.io/do-loadbalancer-http2-ports: '443'
        # Replace with your Certificate Id. You can get a list of Ids with 'doctl compute certificate list'
        service.beta.kubernetes.io/do-loadbalancer-certificate-id: '4bf6d197-6dbb-4394-815b-a543761d94d2'
        service.beta.kubernetes.io/do-loadbalancer-size-slug: 'lb-small'
        service.beta.kubernetes.io/do-loadbalancer-hostname: 'api.infiria.co'
spec:
    type: LoadBalancer
    selector:
        app: infiria-prod-api
    ports:
        - name: http
          protocol: TCP
          port: 443
          targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infiria-prod-api
spec:
    replicas: 6
    selector:
        matchLabels:
            app: infiria-prod-api
    template:
        metadata:
            labels:
                app: infiria-prod-api
        spec:
            containers:
                - name: infiria-prod-api
                  image: registry.digitalocean.com/ever/infiria-api:latest
                  resources:
                      requests:
                          memory: '1536Mi'
                          cpu: '1000m'
                      limits:
                          memory: '2048Mi'
                  ports:
                      - containerPort: 3000
                        protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infiria-prod-webapp
spec:
    replicas: 3
    selector:
        matchLabels:
            app: infiria-prod-webapp
    template:
        metadata:
            labels:
                app: infiria-prod-webapp
        spec:
            containers:
                - name: infiria-prod-webapp
                  image: registry.digitalocean.com/ever/infiria-webapp:latest
                  ports:
                      - containerPort: 4200
                        protocol: TCP
