.deploy/k8s/k8s-manifest.civo.stage.yaml
---
kind: Service
apiVersion: v1
metadata:
    name: infiria-stage
spec:
    selector:
        app: infiria-stage-webapp
    ports:
        - name: web
          protocol: TCP
          port: 4200
          targetPort: 4200
---
kind: Service
apiVersion: v1
metadata:
    name: infiria-stage-api
spec:
    selector:
        app: infiria-stage-api
    ports:
        - name: web
          protocol: TCP
          port: 3000
          targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infiria-stage-api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: infiria-stage-api
    template:
        metadata:
            labels:
                app: infiria-stage-api
        spec:
            containers:
                - name: infiria-stage-api
                  image: ghcr.io/ever-co/infiria-api-stage:latest
                  ports:
                      - containerPort: 3000
                        protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infiria-stage-webapp
spec:
    replicas: 1
    selector:
        matchLabels:
            app: infiria-stage-webapp
    template:
        metadata:
            labels:
                app: infiria-stage-webapp
        spec:
            containers:
                - name: infiria-stage-webapp
                  image: ghcr.io/ever-co/infiria-webapp-stage:latest
                  ports:
                      - containerPort: 4200
                        protocol: TCP

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: https-redirect
spec:
    redirectScheme:
        permanent: true
        scheme: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: infiria-stage
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        - host: stagecivo.infiria.co
          http:
              paths:
                  - backend:
                        service:
                            name: infiria-stage
                            port:
                                number: 4200
                    path: /
                    pathType: Prefix
    tls:
        - hosts:
              - stagecivo.infiria.co
          secretName: stagecivo.infiria.co-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: infiria-stage-api
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        - host: apistagecivo.infiria.co
          http:
              paths:
                  - backend:
                        service:
                            name: infiria-stage-api
                            port:
                                number: 3000
                    path: /
                    pathType: Prefix
    tls:
        - hosts:
              - apistagecivo.infiria.co
          secretName: apistagecivo.infiria.co-tls
