.deploy/k8s/k8s-manifest.cw.prod.yaml
---
kind: Service
apiVersion: v1
metadata:
    name: infiria-prod
spec:
    selector:
        app: infiria-prod-webapp
    ports:
        - name: web
          protocol: TCP
          port: 4200
          targetPort: 4200
---
kind: Service
apiVersion: v1
metadata:
    name: infiria-prod-api
spec:
    selector:
        app: infiria-prod-api
    ports:
        - name: web
          protocol: TCP
          port: 3000
          targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infiria-prod-api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: infiria-prod-api
    template:
        metadata:
            labels:
                app: infiria-prod-api
        spec:
            affinity:
                nodeAffinity:
                    requiredDuringSchedulingIgnoredDuringExecution:
                        nodeSelectorTerms:
                            - matchExpressions:
                                  - key: topology.kubernetes.io/region
                                    operator: In
                                    values:
                                        - ORD1
                                  - key: node.coreweave.cloud/cpu
                                    operator: In
                                    values:
                                        - intel-xeon-v3
                podAntiAffinity:
                    preferredDuringSchedulingIgnoredDuringExecution:
                        - podAffinityTerm:
                              labelSelector:
                                  matchExpressions:
                                      - key: app
                                        operator: In
                                        values:
                                            - infiria-prod-api
                              topologyKey: kubernetes.io/hostname
                          weight: 1
            imagePullSecrets:
                - name: ever-registry-docker-registry-credentials
            containers:
                - name: infiria-prod-api
                  image: ever-registry.tenant-acb888-ever.ord1.ingress.coreweave.cloud/ever-co/infiria-api:latest
                  ports:
                      - containerPort: 3000
                        protocol: TCP
                  resources:
                      requests:
                          cpu: '0.5'
                          memory: 2Gi
                      limits:
                          cpu: '4'
                          memory: 16Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infiria-prod-webapp
spec:
    replicas: 1
    selector:
        matchLabels:
            app: infiria-prod-webapp
    template:
        metadata:
            labels:
                app: infiria-prod-webapp
        spec:
            affinity:
                nodeAffinity:
                    requiredDuringSchedulingIgnoredDuringExecution:
                        nodeSelectorTerms:
                            - matchExpressions:
                                  - key: topology.kubernetes.io/region
                                    operator: In
                                    values:
                                        - ORD1
                                  - key: node.coreweave.cloud/cpu
                                    operator: In
                                    values:
                                        - intel-xeon-v3
                podAntiAffinity:
                    preferredDuringSchedulingIgnoredDuringExecution:
                        - podAffinityTerm:
                              labelSelector:
                                  matchExpressions:
                                      - key: app
                                        operator: In
                                        values:
                                            - infiria-prod-webapp
                              topologyKey: kubernetes.io/hostname
                          weight: 1
            imagePullSecrets:
                - name: ever-registry-docker-registry-credentials
            containers:
                - name: infiria-prod-webapp
                  image: ever-registry.tenant-acb888-ever.ord1.ingress.coreweave.cloud/ever-co/infiria-webapp:latest
                  ports:
                      - containerPort: 4200
                        protocol: TCP
                  resources:
                      requests:
                          cpu: '0.5'
                          memory: 2Gi
                      limits:
                          cpu: '4'
                          memory: 16Gi
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: https-redirect
spec:
    redirectScheme:
        permanent: true
        scheme: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: infiria-prod
    annotations:
        kubernetes.io/ingress.class: traefik-everco
        traefik.ingress.kubernetes.io/router.middlewares: tenant-acb888-ever-https-redirect@kubernetescrd
spec:
    rules:
        - host: appcw.infiria.co
          http:
              paths:
                  - backend:
                        service:
                            name: infiria-prod
                            port:
                                number: 4200
                    path: /
                    pathType: Prefix
    tls:
        - hosts:
              - appcw.infiria.co
          secretName: appcw.infiria.co-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: infiria-prod-api
    annotations:
        kubernetes.io/ingress.class: traefik-everco
        traefik.ingress.kubernetes.io/router.middlewares: tenant-acb888-ever-https-redirect@kubernetescrd
spec:
    rules:
        - host: apicw.infiria.co
          http:
              paths:
                  - backend:
                        service:
                            name: infiria-prod-api
                            port:
                                number: 3000
                    path: /
                    pathType: Prefix
    tls:
        - hosts:
              - apicw.infiria.co
          secretName: apicw.infiria.co-tls
